--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
 #vintage-revival {
   font-family: "Pacifico", cursive;
   color: #161514;
-  font-size: 40px;
+  font-size: 35px;
   filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
 }
 
@@ -26,6 +26,7 @@ header {
   top: 12px;
   font-size: 22px;
   color: #161514;
+  cursor: pointer;
 }
 #cart-counter {
   position: absolute;
@@ -50,6 +51,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
   padding-top: 150px;
   background-color: #fff6e9;
 }
@@ -71,24 +73,27 @@ section h2 {
 
 section ul {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
+  justify-content: center;
+  flex-wrap: wrap;
   padding: 0;
   list-style: none;
   border-bottom: 1px solid goldenrod;
 }
 section p {
-  font-family: "Exo 2", sans-serif;
-  color: black;
-  font-weight: 500;
+  font-family: "Roboto", sans-serif;
+  color: #161514;
 }
+
 #plushie-container {
   border: none;
 }
 #section-container img {
-  width: 350px;
-  height: 350px;
+  width: 250px;
+  height: 250px;
+  border-radius: 15%;
   padding: 25px;
-  border-radius: 10%;
+  /* border-radius: 10%; */
   border: 2px solid goldenrod;
   margin: 10px 25px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
@@ -105,13 +110,15 @@ ul {
 }
 .cart-button {
   background-color: #e5af7d;
+  transition: background-color 0.4s ease;
   padding: 5px 15px;
   border-radius: 10px;
   border: none;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-weight: 550;
+  color: rgb(42, 40, 40);
+  font-family: "Commissioner", sans-serif;
+  font-weight: 600;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
 }
 
 .cart-button:hover {
@@ -125,25 +132,66 @@ ul {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
-  border: 1px solid gray;
+  background-color: rgb(237, 203, 208);
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
   padding: 15px;
   overflow: scroll;
   border-radius: 15px;
 }
+
+#current-cart img {
+  border-radius: 10%;
+}
+
 #current-cart li {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-end;
+  /* justify-content: space-between;
+  flex-wrap: wrap; */
   list-style: none;
   border-bottom: 1px solid black;
   padding: 20px 0;
+  font-family: "roboto";
 }
 #current-cart p {
   text-align: right;
+  font-family: "roboto";
 }
 #button-container {
-  float: right;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
+  text-align: center;
 }
+
+#cash-button,
+#credit-button {
+  background-color: #9bceb5;
+  color: rgb(44, 42, 42);
+  font-family: "Roboto", sans-serif;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+}
+
+#cash-button:hover,
+#credit-button:hover {
+  background-color: #b2d7c5;
+}
+
+#cash-button {
+  margin-right: 10px; /* Optional: Add some space between buttons */
+}
+
 #cash-checkout,
 #credit-checkout {
   position: fixed;
@@ -275,12 +323,24 @@ ul {
   color: black;
 }
 #receipt-container {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   background-color: white;
+  width: 100%; */
+  position: fixed;
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1px solid black;
 }
+
+#receipt-container h3 {
+  text-align: center;
+}
+
 #item-receipt-container {
   display: flex;
   flex-direction: column;
@@ -298,21 +358,49 @@ ul {
   margin: 4px;
 }
 
-#cart-delete-button {
-  /* color: white; */
-  background-color: gold;
-  padding: 5px 8px;
-  border-radius: 50%;
-  border: none;
+.payment-options-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px; /* Optional: Adjust the margin as needed */
 }
-#cash-delete-button,
-#credit-delete-button {
-  margin: 15px;
-  /* color: white; */
-  background-color: gold;
-  padding: 5px 8px;
-  border-radius: 50%;
+
+#payment-text {
+  font-family: "roboto";
+  margin-bottom: 10px;
+}
+
+#cart-delete-button {
+  padding: 5px 10px;
+  color: rgb(84, 79, 79);
+  font-weight: bold;
+  border-radius: 10%;
   border: none;
+  background-color: rgb(237, 203, 208);
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+#cart-delete-button:hover {
+  background-color: rgb(237, 213, 216);
+}
+
+#cash-delete-button,
+#credit-delete-button,
+#receipt-delete-button {
+  display: flex;
+  margin: 15px;
+  color: black;
+  font-weight: bold;
+  padding: 5px 8px;
+  border-radius: 10%;
+  border: none;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 375px) {
 }
 
 @media only screen and (min-width: 768px) {
@@ -346,16 +434,18 @@ ul {
   #section-container section {
     margin: -10px;
   }
-  section ul {
-    display: flex;
-    flex-direction: row;
-  }
+
   #section-container section h2:first-child {
     margin-top: 30px; /* Adjust the value as needed */
   }
-  #section-container img {
-    width: 250px;
-    height: 250px;
-    border-radius: 15%;
+
+  #current-cart li {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    list-style: none;
+    border-bottom: 1px solid black;
+    padding: 20px 0;
   }
 }
