--- a/style.css
+++ b/style.css
@@ -426,6 +426,8 @@ ul {
   font-family: "roboto";
   margin-bottom: 10px;
   text-align: center;
+  font-size: 18px;
+  padding-left: 5px;
 }
 
 #cart-delete-button {
